--- a/Client/NodeOnline/NodeOnline.csproj
+++ b/Client/NodeOnline/NodeOnline.csproj
@@ -93,6 +93,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Logic\Bullet.cs" />
     <Compile Include="Logic\ColorPicker.cs" />
     <Compile Include="Logic\GameConnection.cs" />
     <Compile Include="Logic\KeyManager.cs" />
